# input-dynamics-keyboard

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  RESEARCH_FORK.md  SECURITY.md  clippy.toml  flake.nix  skills.sh.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: build-debug-apk.yml  build-test-auto.yml  publish-apk-release.yml  rust-cli.yml
app/: build.gradle.kts
app/src/debug/res/values/: gesture_data.xml  strings.xml
app/src/debugNoMinify/res/values/: gesture_data.xml  strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/helium314/keyboard/keyboard/: MainKeyboardView.java  PointerTracker.java
app/src/main/java/helium314/keyboard/latin/: InputAttributes.java  LatinIME.java  RichInputConnection.java
app/src/main/java/helium314/keyboard/latin/inputlogic/: InputLogic.java
app/src/main/java/helium314/keyboard/latin/research/: ResearchControlReceiver.kt  ResearchCoordinateFrameSnapshot.kt  ResearchKeyboardLayoutSnapshot.kt  ResearchSessionLogger.kt
app/src/main/java/helium314/keyboard/settings/: SettingsActivity.kt  SettingsNavHost.kt
app/src/main/java/helium314/keyboard/settings/screens/: MainSettingsScreen.kt  ResearchLoggingScreen.kt
app/src/main/java/helium314/keyboard/settings/screens/gesturedata/: Share.kt
app/src/main/java/org/inputdynamics/ime/control/: InputDynamicsControlReceiver.kt
app/src/main/java/org/inputdynamics/ime/debug/control/: InputDynamicsControlReceiver.kt
app/src/main/res/values/: donottranslate.xml  gesture_data.xml  strings.xml
app/src/main/res/xml/: spellchecker.xml
app/src/test/java/helium314/keyboard/: Shadows.kt
app/src/test/java/helium314/keyboard/latin/: InputLogicTest.kt
app/src/test/java/helium314/keyboard/latin/research/: ResearchSessionLoggerTest.kt
cli/input-dynamics/: Cargo.toml
cli/input-dynamics/src/: app.rs  args.rs  clock_probe.rs  commands.rs  controller.rs  coordinate_frame.rs  derivation_policy.rs  error.rs  layout.rs  main.rs  observe.rs  output.rs  process.rs  profile.rs  ratio.rs  record.rs  recording.rs  session_lifecycle.rs  session_process.rs  uinput.rs  validate.rs
cli/input-dynamics/src/recording/: tests.rs
cli/input-dynamics/src/session_state/: io.rs  mod.rs  paths.rs  schema.rs  tests.rs
crates/input-dynamics-analysis/: Cargo.toml
crates/input-dynamics-analysis/src/: clock.rs  lib.rs
crates/input-dynamics-analysis/src/derivation/: dismissal.rs  error.rs  jsonl.rs  mod.rs  press.rs  summary.rs  timeline.rs  touch.rs  video_map.rs
crates/input-dynamics-analysis/src/derivation/press/: tests.rs
crates/input-dynamics-analysis/src/derivation/summary/: tests.rs
crates/input-dynamics-analysis/src/getevent/: mod.rs  normalize.rs  parser.rs  touch_state.rs
docs/: KEYSTROKE_CAPTURE_PLAN.md  README.md  adb-control.md  cli.md  derivation-policies.md  input-dynamics-mode.md  input-profiles.md  releases.md
policies/: default-derivation-v1.json
profiles/: baseline-v1.json
skills/input-dynamics-keyboard/: SKILL.md
skills/input-dynamics-keyboard/agents/: openai.yaml
skills/input-dynamics-keyboard/references/: adb-control.md  jsonl-schema.md
tools/: release.py
