[package]
name = "input-dynamics-analysis"
version = "0.1.0"
description = "Reusable input dynamics analysis algorithms"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
sha2 = { version = "0.10.9", default-features = false }

[dev-dependencies]
proptest = { version = "1.6.0", default-features = false, features = ["std"] }

[lints]
workspace = true
